// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-context-search #render should render default control no props 1`] = `
<gux-context-search value="">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" value="">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control no props With placeholder 1`] = `
<gux-context-search placeholder="Search" value="">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props 1`] = `
<gux-context-search current-match="1" erase-label="clear" match-count="10" navigation-label="10 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Default Search Text">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Default Search Text" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-panel" title="10 Matches Found">
          <span aria-label="1 of 10" class="gux-navigation-result">
            1 of 10
          </span>
          <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode & disable Navigate Mode 1`] = `
<gux-context-search current-match="1" disable-navigation-mode="true" disabled="true" erase-label="clear" match-count="10" navigation-label="0 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled Navigation Disable">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled Navigation Disable" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="0 Match Found">
          <span aria-label="10 Matches" class="gux-navigation-result">
            10 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode & disable Navigate Mode with 1 match 1`] = `
<gux-context-search current-match="1" disable-navigation-mode="true" disabled="true" erase-label="clear" match-count="1" navigation-label="1 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled Navigation Disable">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled Navigation Disable" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="1 Match Found">
          <span aria-label="1 Match" class="gux-navigation-result">
            1 Match
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode & disable Navigate Mode with 100 match & long text 1`] = `
<gux-context-search current-match="1" disable-navigation-mode="true" disabled="true" erase-label="clear" match-count="100" navigation-label="100 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="100 Match Found">
          <span aria-label="100 Matches" class="gux-navigation-result">
            100 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode & disable Navigate Mode with 1000000 match & long text 1`] = `
<gux-context-search current-match="1" disable-navigation-mode="true" disabled="true" erase-label="clear" match-count="1000000" navigation-label="1000000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="1000000 Match Found">
          <span aria-label="1,000,000 Matches" class="gux-navigation-result">
            1,000,000 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode & disable Navigate Mode with 1000000 match 1`] = `
<gux-context-search current-match="1" disable-navigation-mode="true" disabled="true" erase-label="clear" match-count="1000000" navigation-label="1000000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled Navigation Disable">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled Navigation Disable" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="1000000 Match Found">
          <span aria-label="1,000,000 Matches" class="gux-navigation-result">
            1,000,000 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode & disable Navigate Mode with no match 1`] = `
<gux-context-search current-match="0" disable-navigation-mode="true" disabled="true" erase-label="clear" match-count="0" navigation-label="0 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled Navigation Disable">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled Navigation Disable" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="0 Match Found">
          <span aria-label="0 Matches" class="gux-navigation-result">
            0 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode 1`] = `
<gux-context-search current-match="1" disabled="true" erase-label="clear" match-count="10" navigation-label="10 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="10 Matches Found">
          <span aria-label="1 of 10" class="gux-navigation-result">
            1 of 10
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode with 1 match 1`] = `
<gux-context-search current-match="1" disabled="true" erase-label="clear" match-count="1" navigation-label="1 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled with 1 match">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled with 1 match" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="1 Matches Found">
          <span aria-label="1 of 1" class="gux-navigation-result">
            1 of 1
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode with 100000000 match 1`] = `
<gux-context-search current-match="10000" disabled="true" erase-label="clear" match-count="100000000" navigation-label="100000000 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled with big match">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled with big match" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="100000000 Matches Found">
          <span aria-label="10,000 of 100,000,000" class="gux-navigation-result">
            10,000 of 100,000,000
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode with long value 1`] = `
<gux-context-search current-match="1" disabled="true" erase-label="clear" match-count="1" navigation-label="1 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="1 Matches Found">
          <span aria-label="1 of 1" class="gux-navigation-result">
            1 of 1
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode with long value with 100000000 match 1`] = `
<gux-context-search current-match="1100" disabled="true" erase-label="clear" match-count="100000001" navigation-label="100000001 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="100000001 Matches Found">
          <span aria-label="1,100 of 100,000,001" class="gux-navigation-result">
            1,100 of 100,000,001
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable mode with no match 1`] = `
<gux-context-search current-match="0" disabled="true" erase-label="clear" match-count="0" navigation-label="0 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Search Disabled with no Match">
  <div class="gux-disabled">
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" disabled="" placeholder="Search" value="Search Disabled with no Match" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="0 Matches Found">
          <span aria-label="0 of 0" class="gux-navigation-result">
            0 of 0
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" disabled="" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable navigate mode 1`] = `
<gux-context-search current-match="1" disable-navigation-mode="true" erase-label="clear" match-count="10" navigation-label="10 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Disable Navigate Mode" value="Navigation Disabled">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Navigation Disabled" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="10 Matches Found">
          <span aria-label="10 Matches" class="gux-navigation-result">
            10 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable navigate mode with 1 matches 1`] = `
<gux-context-search current-match="0" disable-navigation-mode="true" erase-label="clear" match-count="1" navigation-label="1 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Navigation Disabled">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Navigation Disabled" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="1 Match Found">
          <span aria-label="1 Match" class="gux-navigation-result">
            1 Match
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable navigate mode with 100000000 matches 1`] = `
<gux-context-search current-match="1000" disable-navigation-mode="true" erase-label="clear" match-count="100000000" navigation-label="100000000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Navigation Disabled">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Navigation Disabled" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="100000000 Match Found">
          <span aria-label="100,000,000 Matches" class="gux-navigation-result">
            100,000,000 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props in disable navigate mode with no matches 1`] = `
<gux-context-search current-match="0" disable-navigation-mode="true" erase-label="clear" match-count="0" navigation-label="0 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Navigation Disabled">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Navigation Disabled" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="0 Match Found">
          <span aria-label="0 Matches" class="gux-navigation-result">
            0 Matches
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with invalid  match count 1`] = `
<gux-context-search current-match="100000" erase-label="clear" match-count="abc" navigation-label="100000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="100000 Match Found">
          <span aria-label="0 of 0" class="gux-navigation-result">
            0 of 0
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with invalid current match 1`] = `
<gux-context-search current-match="100000" erase-label="clear" match-count="100" navigation-label="100000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-panel" title="100000 Match Found">
          <span aria-label="1 of 100" class="gux-navigation-result">
            1 of 100
          </span>
          <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with long text 1 match 1`] = `
<gux-context-search current-match="1" erase-label="clear" match-count="1" navigation-label="1 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-panel" title="1 Match Found">
          <span aria-label="1 of 1" class="gux-navigation-result">
            1 of 1
          </span>
          <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with long text 100000 match 1`] = `
<gux-context-search current-match="1000" erase-label="clear" match-count="100000" navigation-label="100000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-panel" title="100000 Match Found">
          <span aria-label="1,000 of 100,000" class="gux-navigation-result">
            1,000 of 100,000
          </span>
          <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with long text no match 1`] = `
<gux-context-search current-match="0" erase-label="clear" match-count="0" navigation-label="0 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend." style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="0 Matches Found">
          <span aria-label="0 of 0" class="gux-navigation-result">
            0 of 0
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with no match 1`] = `
<gux-context-search current-match="0" erase-label="clear" match-count="0" navigation-label="0 Matches Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Default Search Text">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Default Search Text" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-disabled gux-navigation-panel" title="0 Matches Found">
          <span aria-label="0 of 0" class="gux-navigation-result">
            0 of 0
          </span>
          <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;

exports[`gux-context-search #render should render default control with all props with short text 100000 match 1`] = `
<gux-context-search current-match="1000" erase-label="clear" match-count="100000" navigation-label="100000 Match Found" next-label="Next" placeholder="Search" previous-label="Previous" title="Context Search" value="Lorem ipsum dolor">
  <div>
    <div class="gux-context">
      <input aria-label="Context Search" class="gux-text-clearable" placeholder="Search" value="Lorem ipsum dolor" style="padding-right: NaNpx;">
      <div class="gux-search-icon">
        <gux-icon decorative="" iconname="ic-search"></gux-icon>
      </div>
      <div>
        <div class="gux-navigation-panel" title="100000 Match Found">
          <span aria-label="1,000 of 100,000" class="gux-navigation-result">
            1,000 of 100,000
          </span>
          <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
          </button>
          <button aria-label="Next" class="gux-next-button" title="Next" type="button">
            <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
          </button>
        </div>
        <button aria-label="Clear" class="gux-clear-button" title="clear" type="button">
          <gux-icon decorative="" iconname="ic-close"></gux-icon>
        </button>
      </div>
    </div>
  </div>
</gux-context-search>
`;
